General fixes, tunnels-woodland saferoom seems to work!

--- a/nav_mode.cfg
+++ b/nav_mode.cfg
@@ -52,7 +52,6 @@ bind "v" "incrementvar nav_generate_incremental_range 512 2048 512"
 
 // Nav selection
 bind "l" "nav_mark"
-bind "z" "nav_toggle_in_selected_set"
 bind "g" "nav_clear_selected_set; nav_move_mode_off"
 bind "h" "nav_flood_select"
 bind "i" "nav_place_floodfill"
@@ -78,8 +77,10 @@ bind "F8" "nb_move_to_cursor"
 bind "KP_PGUP" "z_spawn tank"
 
 // Editing areas
-bind "MOUSE1" "nav_begin_area"
-bind "MOUSE2" "nav_end_area"
+alias beginarea "nav_begin_area; bind MOUSE2 endarea"
+alias endarea "nav_end_area; bind MOUSE2 beginarea"
+bind "MOUSE1" "nav_toggle_in_selected_set"
+bind "MOUSE2" "beginarea"
 bind "INS" "nav_split"
 bind "c" "nav_split"
 bind "DEL" "nav_delete"
@@ -95,7 +96,7 @@ bind "F7" "nav_simplify_selected"
 bind "F9" "incrementvar nav_snap_to_grid 0 2 1"
 bind "F12" "nav_flood_select; nav_toggle_selected_set"
 bind "PGUP" "nav_trouble_report"
-// bind "" "nav_recompute_flow"
+bind "z" "nav_recompute_flow"
 
 // Setting nav area attributes
 bind "u" "mark OBSCURED"
