--- a/nav_mode.cfg
+++ b/nav_mode.cfg
@@ -97,6 +97,7 @@ bind "F9" "incrementvar nav_snap_to_grid 0 2 1"
 bind "F12" "nav_flood_select; nav_toggle_selected_set"
 bind "PGUP" "nav_trouble_report"
 bind "z" "nav_recompute_flow"
+bind "/" "nav_subdivide"
 
 // Setting nav area attributes
 bind "u" "mark OBSCURED"
